--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ body {
 #main a {
   font-size: 2rem;
   color: #060505;
-  background-color: rgba(224, 25, 25, 0.72);
   padding: 10px;
   border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -32,6 +31,10 @@ body {
 
 #main a:visited {
   color: #333;
+}
+
+.red {
+  background-color: rgba(224, 25, 25, 0.72);
 }
 
 .list {
